Refactor helpdesk application: clean architecture, security question recovery, ticket privacy, and comprehensive test suite